www/main.css
/* Body */
body {
    /*padding-top: 60px;*/
    /*background-image: url('images/background/back-image.jpg');*/
    background-color: white;
    /*background-repeat: repeat;*/
}


/* #fcfcf8; green */
/* #fff6f2; red */

/* Footer */

.footer {
    height: 256px;
    /* background-color: black; */
}

.footer-right {
    width:100%;
    text-align:right;
    background-color: inherit;
}

.footer-left {
    background-color: inherit;
    text-align: left;
}

.footer-center {
    width:100%;
    text-align:center;
    background-color: inherit;
}

.h-line-green {
    border-top: 7px solid #3E5C03
}

.h-line-red {
    border-top: 7px solid #ff4f4d
}

.h-line-white {
    border-top: 7px solid #ffffff;
}

hr {
    width: 100%;
    display: block;
    height: 0px;
    border: 0;
    
    margin: 0em 0;
    padding: 0;    
}

/* small */
@media (max-width: 992px) {
    .no-padding {
        padding-left: 0;
        padding-right: 0;
    }
.body-top-padding {
  padding-top: 57px;
}

    .footer-address {
        text-align: center;
        margin-top: 0px;
        position: relative;
        font-size: small;
        bottom: 0;
        left: 0;
    }

    .social {
        /*margin-left: 1em;*/
        margin-top: 10px;
        margin-bottom: 20px;
        font-size: 32px;
    }

    .footer-address address {
        margin: 0px;
        /*margin-left: 1em;*/
        line-height: 1.2em;
    }

    .footer-center {
      height: 0;
    }

    .footer-right {
      height: 0;
    }

    .footer-logo {
        width: 192px;
        /*height: 192px;*/
        float: center;
        top: -150px;
        position: relative;
        z-index: -1;
        opacity: 0.1;
    }

    .footer-slogan {
        height: 150px;
        float: right;
        position: absolute;
        top: -20em;
        right: 10px;
        z-index: 1000;
        background-color: inherit;
    }


}

@media (min-width: 992px) { 
.body-top-padding {
  padding-top: 196px;
}
    .footer-logo {
        width: 192px;
        /*height: 192px;*/
    }

    .footer-address {
        margin-top: 72px;
        position: relative;
        font-size: medium;
        bottom: 0;
        left: 0;
    }

    .footer-address address {
        margin: 0px;
        margin-left: 1em;
        line-height: 1.1em;
    }

    .social {
        margin-left: 1em;
        margin-top: -50px;
        margin-bottom: 20px;
        font-size: 38px;
    }

    .footer-slogan {
        height: 150%;
        float: right;
        position: absolute;
        bottom: 10px;
        right: 10px;
        z-index: 1000;
        background-color: inherit;
    }
}

/* Content */ 

.bottom-margin {
    margin-bottom: 100px;
}

.no-right-gap {
    margin-right: 0;
    margin-top: 0;
    margin-left: 0;
}

 
brand {
    font-size: 32px;
    font-weight: bold;
    color: white;
    text-shadow: 1px 1px 2px red;
} 

#custom-carousel {
    height: 30px;
}

.footer-address i {
    color: black;
}

/* medium */
@media (min-width: 768px) and (max-width: 1024px) { 
    .item-card {
        box-shadow: 1px 1px 1px 1px #ccc;
    }
    .item-description {
        background-color: #fff;
        text-align: left;
        letter-spacing: 2px;
        line-height: 2;
        padding: 1em;
    }

    .item-image-effects {
        height: 100%;
        width: 100%;
        padding-left: 0;
        padding-right: 0;
        box-shadow: 0 10px 6px -6px rgba(255,0,0,0.5);
    }

    .item-image {
        width: 100%;
        /* padding: 0.6em; */
        background-color: white;
    }

 }

.navbar-custom {
  color: #343a40;
}
.navbar-custom.scrolled .navbar-brand {
    color: #343a40;
}

.navbar-custom.scrolled .navbar-nav .nav-link {
    color: #343a40;
}


/* large */
@media (min-width: 1024px) { 
   /* Navbar */

  #brand {
    height: 172px;
    transition: height 1000ms ease;
  }

  #brand.scrolled {
    height: 64px;
    transition: height 1000ms ease;
  }
  
  .navbar-custom .navbar-nav .nav-link {
    color: #343a40;
    /*text-shadow: 0px 0px 1px #ddd;*/
    font-weight: bold;
  }

  .navbar-custom ul {
    position: relative;
    bottom: -0.5em;
  }

  .navbar-custom .navbar-brand {
    color: #343a40;
    font-weight: bold;
    font-size: 4em;

  }

  .navbar-fixed-top {
    background-color: #ffffff00 !important;
    /*background-image: url("./images/stripes.png");*/
    height: 196px;
    transition: background-image 1000ms linear, height 500ms linear;
  } 
/*
  substitute stripes to a single red stripe
*/
  .navbar-fixed-top.scrolled {
    background-color: #f8f9fa !important;
    color: #343a40;
    height: 72px;
    transition: background-color 1000ms linear, height 500ms linear;
  }

  .navbar-custom.scrolled .navbar-brand {
    color: #343a40;
  }

  .navbar-custom.scrolled .navbar-nav .nav-link {
    color: #343a40;
  }

 .item-card {
        background-color: white;
        box-shadow: 1px 1px 1px 1px #ccc;
    }
    .item-description {
        text-align: left;
        letter-spacing: 0.1em;
        padding: 2em;
        line-height: 1.5em;
    }

    .item-description br {
        margin-bottom: 1em;
    }

    /* effects on image */
    .item-image-effects {
        height: 100%;
        width: 100%;
        position:relative;
        -webkit-box-shadow:0 1px 4px rgba(0, 255, 0, 0.3), 0 0 40px rgba(0, 255, 0, 0.1) inset;
        -moz-box-shadow:0 1px 4px rgba(0, 255, 0, 0.3), 0 0 40px rgba(0, 255, 0, 0.1) inset;
        box-shadow:0 1px 4px rgba(0, 255, 0, 0.3), 0 0 40px rgba(0, 255, 0, 0.1) inset;
    }

    .item-image-effects:before, .item-image-effects:after
    {
        content:"";
        position:absolute;
        z-index:-1;
        -webkit-box-shadow:0 0 20px rgba(255,0,0,0.8);
        -moz-box-shadow:0 0 20px rgba(255,0,0,0.8);
        box-shadow:0 0 20px rgba(255,0,0,0.8);
        top:0;
        bottom:0;
        left:10px;
        right:10px;
        -moz-border-radius:100px / 10px;
        border-radius:100px / 10px;
    }
    .item-image-effects:after
    {
        right:10px;
        left:auto;
        -webkit-transform:skew(8deg) rotate(3deg);
        -moz-transform:skew(8deg) rotate(3deg);
            -ms-transform:skew(8deg) rotate(3deg);
            -o-transform:skew(8deg) rotate(3deg);
                transform:skew(8deg) rotate(3deg);
    }

    .item-image {
        width: 100%;
        padding: 1em;
        background-color: white;
    }

}

/* small */
@media (max-width: 767px) { 
    body {
      padding-top: 57px;
    }

    #brand {
      height: 40px;
    }

    .navbar-custom {
      background-color: white;
    }

    .navbar-custom a {
      font-weight: bold;
      color: #343a40;
    }
    
    .navbar-custom .navbar-nav .nav-link {
      color: #343a40;
      /*text-shadow: 0px 0px 1px #ddd;*/
      font-weight: normal;
    }
    .navbar-custom .navbar-toggler-icon {
      color: #343a40;
    }

    .item-card {
        box-shadow: 1px 1px 1px 1px #ccc;
    }
    .item-description {
        text-align: left;
        letter-spacing: 0.1em;
        padding: 1em;
        line-height: 1.2em;
    }

    .item-description br {
        margin-bottom: 1em;
    }

    /*.item-description {
        background-color: #fff;
        text-align: left;
        letter-spacing: 2px;
        line-height: 1em;
        padding: 1em;
    }

    .item-description br {
      padding-bottom: 1em;
    }*/

    /* effects on image */
    .item-image-effects {
        height: 100%;
        width: 100%;
        padding-left: 0;
        padding-right: 0;
        box-shadow: 0 10px 6px -6px rgba(255,0,0,0.5);
    }

    .item-image {
        width: 100%;
        background: white;
    }

    .item-image .form-group {
        padding: 0.6em;
    }

    .item-image button {
        padding: 0.6em;
    }
}


.fachada {
  padding: 0;
  width: 100%; 
}

img.fachada {
  height: 100%;
}

